--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
-html, body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+html,
+body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif !important;
